[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/hud/building_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/hud/building_info.gd" type="Script" id=2]
[ext_resource path="res://entities/hud/HUD.gd" type="Script" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )
building_button = ExtResource( 1 )

[node name="ConstructionPanel" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -78.0
margin_right = 409.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ConstructionPanel"]
modulate = Color( 1, 1, 1, 0.482353 )
margin_right = 409.0
margin_bottom = 78.0
__meta__ = {
"_edit_lock_": true
}

[node name="BuildingButtons" type="GridContainer" parent="ConstructionPanel"]
margin_right = 409.0
margin_bottom = 78.0
columns = 2
__meta__ = {
"_edit_lock_": true
}

[node name="BuildingInfo" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -178.0
margin_top = -160.0
grow_vertical = 0
custom_constants/margin_right = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BuildingInfo"]
modulate = Color( 1, 1, 1, 0.482353 )
margin_right = 178.0
margin_bottom = 160.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="BuildingInfo"]
margin_right = 178.0
margin_bottom = 160.0

[node name="TopContainer" type="Control" parent="."]
margin_left = 5.66031
margin_top = 4.1509
margin_right = 154.66
margin_bottom = 44.1509
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TopContainer"]
margin_right = 148.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="MoneyLabel" type="RichTextLabel" parent="TopContainer"]
margin_right = 148.0
margin_bottom = 15.0
text = "Money: 0"
__meta__ = {
"_edit_lock_": true
}

[node name="PopulationLabel" type="RichTextLabel" parent="TopContainer"]
margin_left = 1.0
margin_top = 15.0
margin_right = 149.0
margin_bottom = 31.0
text = "Population: 0"
__meta__ = {
"_edit_lock_": true
}

[node name="SaveButton" type="Button" parent="TopContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.68179
margin_top = 3.5451
margin_right = 42.6818
margin_bottom = 23.5451
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="TopContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 52.9085
margin_top = 4.21328
margin_right = 93.9085
margin_bottom = 24.2133
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TopContainer/SaveButton" to="." method="_on_save"]
[connection signal="pressed" from="TopContainer/LoadButton" to="." method="_on_save"]
[connection signal="pressed" from="TopContainer/LoadButton" to="." method="_on_load"]
